# tcc-grade-horaria

./: config.yaml  generate_grade.py  main.py  pyproject.toml  readme.md  schedule_data_loader.py
data/: course_properties.csv  professor_constraints.csv  professors.csv  semesters.csv  student_restrictions.csv  students_data.csv  swappable_courses.csv
results/: formulario.csv
results/grade/: grade_horaria_professor_1.csv  grade_horaria_professor_10.csv  grade_horaria_professor_11.csv  grade_horaria_professor_12.csv  grade_horaria_professor_13.csv  grade_horaria_professor_14.csv  grade_horaria_professor_15.csv  grade_horaria_professor_2.csv  grade_horaria_professor_3.csv  grade_horaria_professor_5.csv  grade_horaria_professor_6.csv  grade_horaria_professor_7.csv  grade_horaria_professor_8.csv  grade_horaria_professor_9.csv  grade_horaria_semester_1.csv  grade_horaria_semester_2.csv  grade_horaria_semester_3.csv  grade_horaria_semester_4.csv  grade_horaria_semester_5.csv  grade_horaria_semester_6.csv  grade_horaria_semester_8.csv  grade_horaria_semester_9.csv
results/grade_mais_optativas/: best_element.txt  run0.csv
results/grade_mais_optativas/grade/: grade_horaria_professor_1.csv  grade_horaria_professor_10.csv  grade_horaria_professor_11.csv  grade_horaria_professor_12.csv  grade_horaria_professor_13.csv  grade_horaria_professor_14.csv  grade_horaria_professor_15.csv  grade_horaria_professor_2.csv  grade_horaria_professor_3.csv  grade_horaria_professor_5.csv  grade_horaria_professor_8.csv  grade_horaria_professor_9.csv  grade_horaria_semester_1.csv  (+8 more)
(+180 files in other folders)
